try maxidle connection with 0 and http1.1